<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_negro"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.tecnoparque4.prototipo.Fragmentos.Frag_Mano_Obra">

    <TextView
        style="@style/Label"
        android:textColor="@color/color_Blanco"
        android:text="@string/Descripcion_Actividad"/>

    <EditText
        style="@style/Cajas_Texto"
        android:inputType="text"
        android:hint="@string/Mano_Obra"
        android:background="@drawable/bordes_estilo"/>

    <TextView
        android:layout_marginTop="10dp"
        style="@style/Label"
        android:textColor="@color/color_Blanco"
        android:text="@string/Cantidad_Jornales"/>

    <EditText
        style="@style/Cajas_Texto"
        android:inputType="number"
        android:background="@drawable/bordes_estilo"/>

    <TextView
        android:layout_marginTop="10dp"
        style="@style/Label"
        android:textColor="@color/color_Blanco"
        android:text="@string/Numero_Hectareas"/>

    <EditText
        style="@style/Cajas_Texto"
        android:inputType="number"
        android:background="@drawable/bordes_estilo"/>

    <TextView
        android:layout_marginTop="10dp"
        style="@style/Label"
        android:textColor="@color/color_Blanco"
        android:text="@string/Precio_Obra"/>

    <EditText
        style="@style/Cajas_Texto"
        android:inputType="number"
        android:hint="@string/$$$"
        android:background="@drawable/bordes_estilo"/>

    <Button
            android:layout_marginTop="10dp"
            style="@style/Boton"
            android:text="@string/Agregar"/>

</LinearLayout>
