<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.tecnoparque4.prototipo.Fragmentos.Lotes">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_negro"
        android:alpha="0.7"
        android:padding="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            style="@style/Label"
            android:textColor="@color/color_Blanco"
            android:text="@string/Nombre"/>

        <EditText
            android:layout_marginTop="20dp"
            style="@style/Cajas_Texto"
            android:hint="@string/Digite_nombre"
            android:inputType="text"
            android:background="@drawable/bordes_estilo"/>

        <TextView
            android:layout_marginTop="20dp"
            style="@style/Label"
            android:textColor="@color/color_Blanco"
            android:text="@string/Número_de_Hectareas"/>

        <EditText
            android:layout_marginTop="20dp"
            style="@style/Cajas_Texto"
            android:inputType="number"
            android:hint="@string/Digite_numero"
            android:background="@drawable/bordes_estilo"/>

        <TextView
            android:layout_marginTop="20dp"
            style="@style/Label"
            android:textColor="@color/color_Blanco"
            android:text="@string/Estado"/>

        <EditText
            android:layout_marginTop="20dp"
            style="@style/Cajas_Texto"
            android:hint="@string/Estado_string"
            android:background="@drawable/bordes_estilo"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                style="@style/Boton"
                android:layout_margin="5dp"
                android:text="@string/Guardar"
                android:layout_weight="1"/>

            <Button
                style="@style/Boton"
                android:layout_margin="5dp"
                android:text="@string/Cancelar"
                android:layout_weight="1"/>

        </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
