<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_negro"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.example.tecnoparque4.prototipo.Fragmentos.Frag_Otros_Gastos">

    <TextView
        style="@style/Label"
        android:textColor="@color/color_Blanco"
        android:text="@string/Descripcion_Gasto"/>

    <EditText
        style="@style/Cajas_Texto"
        android:inputType="text"
        android:hint="@string/Otro_gasto"
        android:background="@drawable/bordes_estilo"/>

    <TextView
        android:layout_marginTop="10dp"
        style="@style/Label"
        android:textColor="@color/color_Blanco"
        android:text="@string/Precio"/>

    <EditText
        style="@style/Cajas_Texto"
        android:inputType="number"
        android:hint="@string/$$$"
        android:background="@drawable/bordes_estilo"/>


        <Button
            style="@style/Boton"
            android:text="@string/Agregar"
            android:layout_marginTop="15dp"/>


</LinearLayout>
