<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_dialogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/color_negro">

        <TextView
            style="@style/Label"
            android:id="@+id/text"
            android:text="@string/Btn_finca"
            android:textColor="@color/color_Blanco"/>

        <EditText
            android:id="@+id/txt_finca"
            android:inputType="textPersonName"
            style="@style/Cajas_Texto"
            android:layout_height="30dp"
            android:layout_below="@+id/text"
            android:layout_marginTop="10dp"/>

        <Button
            style="@style/Boton"
            android:text="@string/Guardar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txt_finca"
            android:id="@+id/button"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom" />


        <Button
            style="@style/Boton"
            android:text="@string/Cancelar"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_alignTop="@+id/button"
            android:layout_toRightOf="@+id/button"
            android:layout_toEndOf="@+id/button"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom" />
    </RelativeLayout>


</LinearLayout>